erDiagram
    
    Manager{
        id uuid PK
        role int
    }

    Restaurant {
        id uuid PK
        name varchar 
        phone varchar
        email varchar
    }

    Branch {
        id uuid PK
        latitude float
        longitude float
    }

    Item {
        id uuid PK
        name varchar UK
        image varchar
        price float
        sizesAvailable varchar(255)
        customizations JSON
        preperationTime float
    }
    
    Category {
        name varchar
        restaurantId uuid FK
    }

    Restaurant ||--|{ Branch : has
    Restaurant ||--o{ Item : includes
    Manager ||--o| Restaurant : manages
    Manager ||--o| Branch : manages
    Item ||--o| Category : "belongs to"
    Restaurant ||--o| Category : "has"
